# parallel-search

./: .gitignore  CMakeLists.txt  README.md
inc/: eventhandler.hpp  functions.hpp  searcher.hpp  threadpool.hpp  vector.hpp
src/: eventhandler.cpp  functions.cpp  main.cpp  searcher.cpp  threadpool.cpp
